--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
     "mapbox-gl": "^3.11.0",
+    "maplibre-gl": "^5.3.1",
     "next": "15.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
