Added to git lfs

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ public/tasmania_suburbs.json filter=lfs diff=lfs merge=lfs -text
 public/victoria_suburbs.json filter=lfs diff=lfs merge=lfs -text
 public/wa_suburbs.json filter=lfs diff=lfs merge=lfs -text
 public/structured_data.json filter=lfs diff=lfs merge=lfs -text
+data/top_100_suburbs.json filter=lfs diff=lfs merge=lfs -text
