--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,5 @@ public/tasmania_suburbs.json filter=lfs diff=lfs merge=lfs -text
 public/victoria_suburbs.json filter=lfs diff=lfs merge=lfs -text
 public/wa_suburbs.json filter=lfs diff=lfs merge=lfs -text
 public/structured_data.json filter=lfs diff=lfs merge=lfs -text
+public/map_colours.json filter=lfs diff=lfs merge=lfs -text
+public/mvar_predictions_100.json filter=lfs diff=lfs merge=lfs -text
