--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/mapbox-gl": "^3.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "gradio": "^0.1.0",
     "lucide-react": "^0.487.0",
     "mapbox-gl": "^3.11.0",
     "maplibre-gl": "^5.3.1",
@@ -22,7 +23,9 @@
     "react-dom": "^19.0.0",
     "react-map-gl": "^8.0.3",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5"
+    "tw-animate-css": "^1.2.5",
+    "@gradio/client": "^0.1.0",
+    "node-gyp-build": "^4.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
