--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gradio/client": "^0.1.0",
+    "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@types/mapbox-gl": "^3.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -19,13 +24,13 @@
     "mapbox-gl": "^3.11.0",
     "maplibre-gl": "^5.3.1",
     "next": "15.2.5",
+    "next-themes": "^0.4.6",
+    "node-gyp-build": "^4.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-map-gl": "^8.0.3",
     "tailwind-merge": "^3.2.0",
-    "tw-animate-css": "^1.2.5",
-    "@gradio/client": "^0.1.0",
-    "node-gyp-build": "^4.6.0"
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
